Fix not responsive cols 5

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -72,3 +72,9 @@ html {
 button > * {
   pointer-events: none;
 }
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
